# model_qwen2.5_vl_lora

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build_docker.py  check_classifiication.py  check_entity_extractor.py  check_page_sorting.py  config_classification.json  config_page_sorting.json  config_prompt_optimization.json  config_test_model.json  document_classes.py  fix_packages_for_staging.md  limited_tree.py  metrics.py  optimize_prompt.py  pyproject.prod.toml  pyproject.toml  release_tool.toml  report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_20250620_235419.md  report_classifiication.py  strctured_output.py  test_config.py  test_model.py  Планы.md  Планы2.md  Планы_realise_tool.md
.github/workflows/: publish.yml
bench_utils/: __init__.py  model_utils.py  utils.py
docker/: Docker_builder.md  Dockerfile-cu124  Dockerfile-cu124-uv  Dockerfile-cu124-uv-dev  Dockerfile-cu124-uv-prod  Dockerfile-cu124_eval  Dockerfile-uv  README.md  build_config.json  uv_flash_attention_build.md  uv_set_cuda_for_torch.md
docs/: check_classifiication.md  check_page_sorting.md  dev_process.md  development_precess_idea.md  development_process.md  development_process_idea.md  limited_tree.md  realise_changelog.md
docs/docs_new/: 00_quick_start.md  01_architecture_concept.md  01_concept_overview.md  02_dev_staging_prod.md  02_dev_vs_prod.md  03_dependency_management.md  03_environment_setup.md  04_dependency_management.md  04_running_scripts.md  05_adding_packages.md  05_running_scripts.md  06_adding_packages.md  06_prod_build_and_docker.md  07_docker_builder_full.md  07_docker_deployment.md  08_tooling_and_hooks.md  08_tooling_automation.md  09_build_docker.md  09_torch_backends.md  10_python_versions.md  adding_packages.md  dev_vs_prod.md  docker_builder_full.md  prod_build_and_docker.md
docs/plans/: plans_docker.md  Планы.md
docs/realise_templates/: additiitiion_instructions.md  release_process_instruction.md
downloaders/: download_dataset.py  download_prompts.py
prod/: pyproject.toml
reports/: report_Qwen2.5-VL-3B-Instruct_classification_2_stage_20250620_234247.md  report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_20250630_062716.md  report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_20250630_064200.md  report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_2025_06_30_06-57-04.md  report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_2025_06_30_07-02-56.md  report_Qwen2.5-VL-7B-Instruct_classification_2_stage_new_2025_06_30_07-13-03.md  report_classifiication.md
staging/: pyproject.toml
vlm_hyperbench/: __init__.py
