[project]
name = "vlm-hyperbench"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "bench-utils",
    "model-interface",
    "model-qwen2-5-vl",
    "prompt-handler",
    "print-utils",
]

[tool.uv.sources]
bench-utils = { workspace = true }
model-interface = { workspace = true }
model-qwen2-5-vl = { workspace = true }
prompt-handler = { workspace = true }
print-utils = { workspace = true }

[tool.uv.workspace]
# все пакеты, лежащие в каталогах packages/* (каждый должен содержать собственный pyproject.toml)
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vlm_hyperbench"] 