[project]
name = "vlm-hyperbench"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "bench-utils",
    "model-interface",
    "model-qwen2-5-vl",
    "prompt-handler",
    "print-utils",
    "hello-world",
    "tabulate>=0.9.0",
    "packaging>=23.0",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
bench-utils = { workspace = true }
model-interface = { workspace = true }
model-qwen2-5-vl = { workspace = true }
prompt-handler = { workspace = true }
print-utils = { workspace = true }
hello-world = { workspace = true }
release-tool = { workspace = true }

[tool.uv.workspace]
# все пакеты, лежащие в каталогах packages/* (каждый должен содержать собственный pyproject.toml)
members = ["packages/*", "release_tool"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vlm_hyperbench"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "E402"]

[project.optional-dependencies]
# оставляем только extras для публикации (если нужны)

[dependency-groups]
dev = [
    "ruff>=0.4.2",
    "pre-commit>=3.7.0",
    "mypy>=1.9",
    "release-tool",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
ignore_missing_imports = true
# Suppress noisy codes for tomlkit etc. Remove gradually after refactor.
disable_error_code = [
    "call-overload",
    "index",
    "operator",
    "union-attr",
    "assignment",
    "no-any-return",
    "unused-ignore",
]
