# Prod configuration: использовать теги GitHub вместо локального workspace
# Обновите значения tag при выпуске новой версии.

[project]
name = "vlm-hyperbench"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "bench-utils",
    "model-interface",
    "model-qwen2-5-vl",
    "prompt-handler",
    "print-utils",
]

[tool.uv.sources]
bench-utils = { git = "https://github.com/VLMHyperBenchTeam/bench_utils.git", tag = "0.1.2", subdirectory = "." }
model-interface = { git = "https://github.com/VLMHyperBenchTeam/model_interface.git", tag = "0.1.2", subdirectory = "." }
model-qwen2-5-vl = { git = "https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl.git", tag = "0.1.2", subdirectory = "." }
prompt-handler = { git = "https://github.com/VLMHyperBenchTeam/prompt_handler.git", tag = "0.0.1", subdirectory = "." }
print-utils = { git = "https://github.com/VLMHyperBenchTeam/print_utils.git", tag = "0.0.1", subdirectory = "." }
hello-world = { git = "https://github.com/VLMHyperBenchTeam/hello_world.git", tag = "0.0.11", subdirectory = "." }
