# Staging configuration: фиксируем dev-теги пакетов для ручного тестирования
# Обновляйте значения tag на этапе *Stage 4*; после принятия PR они переедут в prod/pyproject.toml

[project]
name = "vlm-hyperbench"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "bench-utils",
    "model-interface",
    "model-qwen2-5-vl",
    "prompt-handler",
    "print-utils",
]

[tool.uv.sources]
bench-utils = { git = "https://github.com/VLMHyperBenchTeam/bench_utils.git", tag = "v0.1.2.dev3", subdirectory = "." }
model-interface = { git = "https://github.com/VLMHyperBenchTeam/model_interface.git", tag = "v0.1.2", subdirectory = "." }
model-qwen2-5-vl = { git = "https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl.git", tag = "v0.1.2.dev3", subdirectory = "." }
prompt-handler = { git = "https://github.com/VLMHyperBenchTeam/prompt_handler.git", tag = "0.0.1dev0", subdirectory = "." }
print-utils = { git = "https://github.com/VLMHyperBenchTeam/print_utils.git", tag = "v0.0.1dev1", subdirectory = "." }
hello-world = { git = "https://github.com/VLMHyperBenchTeam/hello_world.git", \10.0.10.dev1\3, subdirectory = "." }
