# Staging configuration: фиксируем dev-теги пакетов для ручного тестирования
# Обновляйте значения tag на этапе *Stage 4*; после принятия PR они переедут в prod/pyproject.toml

[project]
name = "vlm-hyperbench"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "bench-utils",
    "model-interface",
    "model-qwen2-5-vl",
    "prompt-handler",
    "print-utils",
]

[tool.uv.sources]
bench-utils = { git = "https://github.com/VLMHyperBenchTeam/bench_utils.git", tag = "0.1.2.dev5", subdirectory = "." }
model-interface = { git = "https://github.com/VLMHyperBenchTeam/model_interface.git", tag = "0.1.2.dev6", subdirectory = "." }
model-qwen2-5-vl = { git = "https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl.git", tag = "v0.1.2.dev3", subdirectory = "." }
prompt-handler = { git = "https://github.com/VLMHyperBenchTeam/prompt_handler.git", tag = "0.0.1.dev3", subdirectory = "." }
print-utils = { git = "https://github.com/VLMHyperBenchTeam/print_utils.git", tag = "0.0.1.dev4", subdirectory = "." }
hello-world = { git = "https://github.com/VLMHyperBenchTeam/hello_world.git", tag = "0.0.10.dev6", subdirectory = "." }
